implemented initiatives
