# monolith/src/main/resources/openapi/opora-api.yml
@@ -545,6 +545,8 @@ components:
             oneOf:
               - $ref: '#/components/schemas/Address'
               - $ref: '#/components/schemas/NovaPoshta'
+            discriminator:
+              propertyName: directionsType
         items:
           type: array
           minItems: 1
@@ -625,6 +627,8 @@ components:
             oneOf:
               - $ref: '#/components/schemas/Address'
               - $ref: '#/components/schemas/NovaPoshta'
+            discriminator:
+              propertyName: directionsType
         items:
           type: array
           minItems: 1
@@ -681,9 +685,14 @@ components:
     Address:
       type: object
       required:
+        - directionsType
         - street
         - town
       properties:
+        directionsType:
+          type: string
+          description: Directions type discriminator
+          default: Address
         street:
           type: string
           example: 'vul. Hrushevskoho 1'
@@ -698,10 +707,15 @@ components:
     NovaPoshta:
       type: object
       required:
+        - directionsType
         - town
         - office
         - recipient
       properties:
+        directionsType:
+          type: string
+          description: Directions type discriminator
+          default: NovaPoshta
         town:
           type: string
           example: 'Kyiv'
